tests/integration/features/html/--filter-sections/_validations/01_incorrect_query/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir %T --filter-requirements='BROKEN QUERY' | filecheck %s --dump-input=fail
CHECK: error: Cannot parse filter query.
